<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layout"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="12dp"
            android:gravity="center_vertical"
            android:background="#4d4dff">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="ClickMenu"
                android:src="@drawable/ic_menu"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/menu_vaccination_appointment"
                android:textSize="20dp"
                android:textStyle="bold"
                android:layout_marginStart="20dp"
                android:textColor="#ffffff"/>
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vaccination_appointment3_title"
                    android:textSize="27dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="28dp"
                    android:layout_marginBottom="32dp">
                </TextView>

                <DatePicker
                    android:id="@+id/date_picker"
                    android:layout_width="wrap_content"
                    android:calendarViewShown="true"
                    android:spinnersShown="false"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"/>

                <TimePicker
                    android:id="@+id/time_picker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"/>

                <Button
                    android:id="@+id/button_change_datetime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vaccination_appointment3_button"
                    android:layout_gravity="center"
                    android:textSize="20dp"
                    android:layout_marginBottom="16dp"/>

                <Button
                    android:id="@+id/button_cancel_change_datetime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vaccination_appointment3_button2"
                    android:layout_gravity="center"
                    android:textSize="20dp"
                    android:layout_marginBottom="16dp"/>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@android:color/white">

        <include
            layout="@layout/main_nav_drawer"/>
    </RelativeLayout>

</androidx.drawerlayout.widget.DrawerLayout>